# cargo-stow

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-stow.yaml
examples/greeter/: Cargo.toml
src/: docker.rs  main.rs
