[package]
name = "cargo-stow"
version = "0.0.2-dev"
edition = "2024"
description = "OCI-compatible container builder out of the box"
readme = "README.md"
repository = "https://github.com/kuenishi/cargo-stow"
license = "MIT"
license-file = "LICENSE"
keyword = ["cargo", "container", "container-images"]


[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
### cargo = "*"
serde = { version = "1", features = ["derive"]}
toml = "0.9"
tinytemplate = "1"
tempfile = "3"
clap = { version = "4.5", features = ["derive"]}

[features]
docker = []
youki = []

[package.metadata.container]
# All built binaries to be installed in /usr/bin
target_image = "registry.example.org/some/image"
# Defines base container image name where the build starts on
# Supported base images: ubuntu (and others in near future?)
base_image = "ubuntu"
# Define packages needed for build, e.g. headers, except rustup and cargo
build_deps = ["emacs-nox", "libssl-dev"]
# Define packages needed in runtime, e.g. libraries
runtime_deps = ["emacs-nox", "libssl3t64"]
